<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageButton
            android:id="@+id/add_profile_buton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@null"
            android:src="@mipmap/ic_placeholder"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/user_name_layout"
            app:layout_constraintStart_toStartOf="@+id/user_name_layout"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/user_name_layout"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="12sp"
              android:text="@string/fragment_new_contact_add_img_button"
              app:layout_constraintEnd_toEndOf="@+id/add_profile_buton"
              app:layout_constraintStart_toStartOf="@+id/add_profile_buton"
              app:layout_constraintTop_toBottomOf="@+id/add_profile_buton"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/user_last_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/fragment_new_contact_name_hint"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="10"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/user_last_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/user_phone_layout"
            app:layout_constraintEnd_toEndOf="@+id/user_name_layout"
            app:layout_constraintStart_toStartOf="@+id/user_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/user_name_layout">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/fragment_new_contact_last_name_hint"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/user_phone_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/user_age_layout"
            app:layout_constraintEnd_toEndOf="@+id/user_last_name_layout"
            app:layout_constraintStart_toStartOf="@+id/user_last_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/user_last_name_layout">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/fragment_new_contact_phone_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="10"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/user_age_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/user_phone_layout"
            app:layout_constraintStart_toStartOf="@+id/user_phone_layout"
            app:layout_constraintTop_toBottomOf="@+id/user_phone_layout">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/user_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/fragment_new_contact_age_hint"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_contact_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorAccent"
            android:text="@string/fragment_new_contact_save_button"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/user_age_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/user_age_layout"
            app:layout_constraintEnd_toEndOf="@+id/user_age_layout"/>


</android.support.constraint.ConstraintLayout>