<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="16dp"
                                    app:cardCornerRadius="12dp"
                                    app:cardElevation="8dp"
                                    android:id="@+id/contact_card_view">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp">


        <TextView
                android:id="@+id/contact_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fragment_contacts_card_name_mock"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/contact_profile_pic"
                android:ellipsize="end"
                android:maxLines="1"/>

        <TextView
                android:id="@+id/contact_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fragment_contacts_card_age_mock"
                app:layout_constraintTop_toBottomOf="@+id/contact_name"
                app:layout_constraintStart_toStartOf="@+id/contact_name"
                app:layout_constraintEnd_toStartOf="@+id/contact_profile_pic"
                android:maxLines="1"/>

        <TextView
                android:id="@+id/contact_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fragment_contacts_card_phone_mock"
                app:layout_constraintStart_toStartOf="@+id/contact_age"
                app:layout_constraintTop_toBottomOf="@+id/contact_age"
                app:layout_constraintEnd_toEndOf="@+id/contact_age"
                android:maxLines="1"/>

        <ImageView
                android:id="@+id/contact_profile_pic"
                android:layout_width="60dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/contact_name"
                app:layout_constraintBottom_toBottomOf="@+id/contact_phone"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@mipmap/ic_launcher222"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>