<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/progress_bar"/>


    <LinearLayout
            android:id="@+id/login_form_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">

        <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/activity_login_mail_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="16sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/activity_login_password_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:backgroundTint="@color/colorAccent"
                android:text="@string/activity_login_button_text"
                android:textColor="@android:color/white"/>

    </LinearLayout>

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>